@@ -7,6 +7,7 @@
   * download scala compiler and library from Ivy (no need in scala.home any more)
   * ALTER TABLE statements on single table are joined now
   * BOOLEAN support
+  * CREATE TABLE ... LIKE
   * ...
 
 - 0.2 -
